--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,25 @@
+:root {
+  --first-color: rgb(236, 38, 143);
+  --first-alpha-color: rgb(236, 38, 143, 0.75);
+  --second-color: rgb(0, 0, 0) ;
+  --text-color: rgb(212, 212, 212);
+
+  /* Colores de fondo*/
+  --bg-color: rgb(241, 237, 237);
+  --bg-alpha-color: rgb(241, 237, 237, 0.75);
+  --bg-color-2:  rgb(245, 245, 245);
+  --gb-alpha-color-2:  rgb(245, 245, 245, 0.75);
+
+  /* Otros colores*/
+  --yellow-color: rgb(240, 240, 106);
+  --dark-color: rgb(51, 49, 49);
+  --white-color: rgb(255,255,255);
+  --grayDark-color: rgb(128,128,128);
+  --grayDark-alpha-color: rgb(128,128,128, 0.75);
+  --grayLigth-color: rgb(219, 214, 214); 
+  --grayLigth-alpha-color: rgb(219, 214, 214 0.75);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,17 +30,17 @@
 /* ---------- HEADER  ---------- */
 
 a {
-  color: #fff;
+  color: var(--white-color);
   transition: all .3s ease-out;
 }
 
 a:hover {
-  color: #ec268f;;
+  color: var(--first-color);
 }
 
 body {
-  background: #000000;
-  color: #fff;
+  background: var(--second-color);
+  color: var(--white-color);
   font: 14px;
   font-family: "Raleway", sans-serif; 
   color:var(--text-color);
@@ -40,7 +62,7 @@ body {
 }
 
 .header-text {
-  color: #fff;
+  color: var(--text-color);
   margin-top: 20%;
 }
 
@@ -48,7 +70,7 @@ body {
   font-size: 100px;
   line-height: 90px;
   margin-left: -5px;
-  color: #ec268f;
+  color: var(--first-color);
   font-family: 'Audiowide';
 }
 
@@ -59,7 +81,7 @@ body {
   /*color: #ec268f;*/
   font-family: 'Audiowide';
   color: transparent;
-  -webkit-text-stroke: 0.001px #fff;
+  -webkit-text-stroke: 0.001px var(--white-color);
   background: url(../images/back-logo-1.png);
   -webkit-background-clip: text;
   background-position: 0 0;
@@ -75,6 +97,7 @@ body {
   font-size: 40px;
   font-weight: 600;
   font-family: "Raleway";
+  color: var(--white-color);
 }
 
 .header-text h4 {
@@ -82,10 +105,11 @@ body {
   font-weight: 500;
   line-height: 45px;
   font-family: "Raleway";
+  color: var(--white-color);
 }
 
 .logo {
-  width: 150px;
+  width: 160px;
   cursor: pointer;
 }
 
@@ -110,7 +134,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #fff;
+  color: var(--white-color);
   text-decoration: none;
   font-size: 17px;
   position: relative;
@@ -120,7 +144,7 @@ nav ul li a::after {
   content: '';
   width: 0;
   height: 2px;
-  background: #ec268f;
+  background: var(--first-color);
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -130,7 +154,7 @@ nav ul li a::after {
 
 nav ul li a:hover::after {
   width: 60%;
-  color: #ec268f;
+  color: var(--first-color);
 }
 
 .social-icons {
@@ -145,19 +169,23 @@ nav ul li a:hover::after {
   margin: 25px 5px;
 }
 
+.social-icons img:hover {
+  color: var(--first-color);
+}
+
 /* ---------- ABOUT  ---------- */
 
 #about {
-  padding: 80px 0;
+  padding: 50px 0;
 }
 
 .row {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  color: #ababab;
+  /*color: #ababab;*/
+  color: var(--text-color);
 }
-
 
 .about-col-1 {
   flex-basis: 35%;
@@ -166,21 +194,28 @@ nav ul li a:hover::after {
 .about-col-1 img {
   width: 80%;
   border-radius: 15px;
+  transition: transform 0.5s;
+}
+
+.about-col-1:hover img {
+  transform: scale(1.1);
 }
 
 .about-col-2 {
   flex-basis: 60%;
 }
 
-.sub-title {
-  font-size: 40px;
-  color: #fff;
-  font-family: 'Audiowide';
+.sub-title-about {
+  font-size: 35px;
+  font-weight: 300;
+  line-height: 35px;
+  font-family: "Raleway";
+  color: var(--white-color);
 }
 
 .tab-titles {
   display: flex;
-  margin: 20px 0 40px;
+  margin: 20px 0 20px;
 }
 
 .tab-links {
@@ -191,11 +226,15 @@ nav ul li a:hover::after {
   position: relative;
 }
 
+.tab-links:hover {
+  color: var(--first-color);
+}
+
 .tab-links::after {
   content: '';
   width: 0;
   height: 2px;
-  background: #ec268f;
+  background: var(--first-color);
   position: absolute;
   left: 0;
   bottom: -4px;
@@ -212,18 +251,237 @@ nav ul li a:hover::after {
 }
 
 .tab-contents ul li span {
-  color: #ec268f;
+  color: var(--first-color);
   font-size: 14px; 
 }
 
 .tab-contents {
   display: none;
-
 }
 
 .tab-contents.active-tab {
   display: block;
 }
+
+/* ---------- SERVICES  ---------- */
+
+#services {
+  padding: 50px 0;
+}
+
+.sub-title-services {
+  font-size: 35px;
+  font-weight: 300;
+  line-height: 55px;
+  font-family: "Raleway";
+  color: var(--white-color);
+}
+
+.services-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 30px;
+  font-family: "Raleway";
+}
+
+.services-list div {
+  font-family: "Raleway";
+  background: var(--grayDark-color);
+  padding: 30px;
+  border-radius: 15px;
+  transition: background 0.75s, transform 0.75s;
+  color: var(--white-color);
+}
+
+.services-list div:hover {
+  background: var(--first-color);
+  transform: translateY(-20px);
+}
+
+.services-list div img {
+  margin-bottom: 10px;
+  width: 30%;
+}
+
+.services-list div h3 {
+  font-family: "Raleway";
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.services-list div p {
+  font-family: "Raleway";
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+.services-list div a {
+  text-decoration: none;
+  color: var(--white-color);
+  font-size: 12px;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.button-black {
+  background-color: var(--second-color);
+  border-color: var(--second-color);
+  display: inline-block;
+  font-family: "Raleway";
+  font-weight: 600;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 0.375rem 0.75rem;
+  font-size: 20px;
+  line-height: 1.5;
+  border-radius: 10px;
+  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  text-decoration: none;
+}
+
+.button-black:hover {
+  color: #000000;
+  background-color: #fff;
+  border-color: #fff;
+  transition: color .15s ease-in-out;
+  font-weight: 600;
+}
+
+/* ---------- PORTFOLIO  ---------- */
+
+#portfolio {
+  padding: 50px 0;
+}
+
+.sub-title-portfolio {
+  font-size: 35px;
+  font-weight: 300;
+  line-height: 55px;
+  font-family: "Raleway";
+  color: var(--white-color);
+}
+
+.work-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 20px;
+  font-family: "Raleway";
+}
+
+.work {
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.work img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
+}
+
+.layer {
+  width: 100%;
+  height: 0; /* No visible la capa rosada */
+  background: linear-gradient(rgb(0, 0, 0 , 0.1), var(--first-color));
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  /*Datos para la capa transparente. Para bajar las letras ubicamos el display: */
+  display: flex;
+  align-items: center;
+  align-content: flex-end;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 20px;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
+}
+
+.layer H3 {
+  margin-top: 180px;
+  font-weight: 500;
+  margin-bottom: 8px;
+  font-size: 22px;
+}
+
+.layer a {
+  margin-top: 30px;
+}
+
+.work:hover img {
+  transform: scale(1.2);
+}
+
+.work:hover .layer {
+  height: 100%;
+}
+
+.btn {
+  display: block;
+  margin: 50% auto;
+  width: fit-content;
+  border: 1px solid var(--first-color);
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: var(--white-color);
+  transition: background 0.5s;
+}
+
+.btn:hover {
+  background: var(--first-color);
+}
+
+.button-white {
+  color: #000000;
+  background-color: var(--white-color);
+  border-color: var(--white-color);
+  display: inline-block;
+  font-family: "Raleway";
+  font-weight: 600;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 8px 14px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 10px;
+  text-decoration: none;
+  /*transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out; */
+  transition: background 0.75s, transform 0.75s;
+}
+
+.button-white:hover {
+  color: var(--white-color);
+  background-color: var(--second-color);
+  border-color: var(--second-color);
+  transition: color .15s ease-in-out;
+  font-weight: 600;
+  transform: translateY(-7px);
+}
+
+
+/* ---------- CONTACT  ---------- */
+
 
 
 
