--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,21 +9,19 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,400;0,700;1,200;1,300;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,400;0,700;1,200;1,300;1,400;1,700&display=swap"
+    rel="stylesheet"/>
+
+    <!-- FONTAWESOME  -->
+    <script src="https://kit.fontawesome.com/0591dd6427.js" crossorigin="anonymous"></script>
 
     <!-- STYLESHEET PROPIA -->
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
   <body>
-    <!-- INICIO HEADER & NAVBAR -->
+    <!-- START HEADER & NAVBAR -->
     <section id="header">
       <div class="container">
         <nav>
@@ -38,27 +36,27 @@
         </nav>
 
         <div class="header-text">
-          <p>Hi, I'm<br /></p>
-          <h1><span class="span-m">M</span><span
-              class="span-arina"
-            >ARINA</span></h1>
+          <p>Hi, I'm</p>
+          <br>
+          <h1>
+            <span class="span-m">M</span>
+            <span class="span-arina">ARINA</span>
+          </h1>
           <h4>Full Stack Developer + Mkt specialist</h4>
         </div>
 
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/marina-aguirre-3652a410/?"
-            target="_blank" rel="noopener noreferrer"
-          ><img src="../images/linkedin-icon.png" alt="whatsapp-icon" /></a>
-          <a href="https://api.whatsapp.com/send?phone=543512463603"
-            target="_blank" rel="noopener noreferrer"
-          > <img src="../images/whatsapp-icon.png" alt="whatsapp-icon" /> </a>
+          <a href="https://www.linkedin.com/in/marina-aguirre-3652a410/?" target="_blank" rel="noopener noreferrer">
+          <img src="../images/linkedin-icon.png" alt="whatsapp-icon"/></a>
+          <a href="https://api.whatsapp.com/send?phone=543512463603" target="_blank" rel="noopener noreferrer">
+          <img src="../images/whatsapp-icon.png" alt="whatsapp-icon"/></a>
         </div>
 
       </div>
     </section>
-    <!-- FIN HEADER & NAVBAR -->
+    <!-- END HEADER & NAVBAR -->
 
-    <!-- INICIO ABOUT -->
+    <!-- START ABOUT -->
     <section id="about">
       <div class="container">
         <div class="row"> <!-- INICIO ROW -->
@@ -66,9 +64,10 @@
               <img src="../images/Marina.png" alt="Marina Aguirre photography">
           </div>
           <div class="about-col-2">
-            <h1 class="sub-title">About</h1> <br>
-            <p> I'm Marina Aguirre, full Stack developer and Marketing sepecialist from Argentina.
-                I started in 2005 in digital marketing + e-commerce. Since a few years ago I work as a front-end and back-end developer.
+            <h3 class="sub-title-about">ABOUT</h3>
+            <br>
+            <p> I'm Marina Aguirre, Full Stack Developer and Marketing Specialist from Argentina.
+                I started in 2005 in digital mkt + e-commerce. Since 2020 work as a front and back-end developer.
             </p>
 
             <div class="tab-titles">
@@ -79,13 +78,13 @@
 
             <div class="tab-contents active-tab" id="skills">
               <ul>
-                <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
+                <li><span>UI/UX Design</span><br>Designing Web/App interfaces</li>
                 <li><span>Web development</span><br>Front-end + Back-end development</li>
                 <li><span>App Development</span><br>Building hybridApps</li>
               </ul>
             </div>
 
-             <div class="tab-contents" id="experience">
+            <div class="tab-contents" id="experience">
               <ul>
                 <li><span>2020 - Current</span><br>Freelance Front-End developer</li>
                 <li><span>2019-2020</span><br>Chief Marketing at Obraplus S.A</li>
@@ -101,19 +100,101 @@
               </ul>
             </div>
             <br>
-            <p>I like buils RESPONSIVE, DINAMIC and FAST LOAD websites. For easy and intuitive UX/UI. <br>
-               I love making pages come to life.</p>
-
 
           </div>
-        </div> <!-- FIN ROW -->
+        </div> <!-- END ROW -->
       </div>
     </section>
-    <!-- FIN ABOUT -->
+    <!-- END ABOUT -->
+
+    <!-- START SERVICES -->
+    <section id="services">
+      <div class="container">
+        <h2 class="sub-title-services">SERVICES</h2>
+        <div class="services-list">
+
+          <div>
+            <img class="services-icon" src="../images/ui-ux-icon.png" alt="icono-ui-ux-design">
+            <h3>UX/UI DESIGN</h3>
+            <p>I make easy and intuitive design. I create web friendly interfaces that are efficient and enjoyable.</p>
+            <a class="button-black" href="#" role="button">LEARN MORE</a>
+          </div>
+
+          <div>
+            <img class="services-icon" src="../images/web-development-icon.png" alt="icono-web-design">
+            <h3>WEB DESIGN</h3>
+            <p>I build responsive, dynamic, fast loading websites with simple navigation.</p>
+            <a class="button-black" href="#" role="button">LEARN MORE</a>
+          </div>
+
+          <div>
+            <img class="services-icon" src="../images/e-commerce-icon.png" alt="icono-mobile-design">
+            <h3>E-COMMERCE</h3>
+            <p> I love making e-commerce whith: readability, usability, speed, clear call-to-action and usable forms.</p>
+            <a class="button-black" href="#" role="button">LEARN MORE</a>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- END SERVICES -->
+
+    <!-- START PORTFOLIO -->
+    <section id="portfolio">
+      <div class="container">
+        <h2 class="sub-title-portfolio">PORTFOLIO</h2>
+
+        <div class="work-list">
+
+          <div class="work">
+            <img src="../images/portfolio-a.png" alt="image-beer-rosario-website">
+            <div class="layer">
+              <h3>CRAFT BREWERY</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+              <a class="button-white" href="#" role="button">SEE MORE</a>
+            </div> 
+          </div>
+
+          <div class="work">
+            <img src="../images/portfolio-b.png" alt="image-beer-rosario-website">
+            <div class="layer">
+              <h3>MARKETING AGENCY</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+              <a class="button-white" href="#" role="button">SEE MORE</a>
+            </div> 
+          </div>
+
+          <div class="work">
+            <img src="../images/portfolio-c.png" alt="image-beer-rosario-website">
+            <div class="layer">
+              <h3>AESTHETIC CENTER</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+              <a class="button-white" href="#" role="button">SEE MORE</a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+    <!-- END PORTFOLIO -->
+
+    <!-- START CONTACT -->
+    <section id="contact">
+      
+
+
+    </section>
+    <!-- END CONTACT -->
+
+
+
+
 
 
 
     {{{body}}}
+
+
 
 
   <script>
